force-app/main/default/objects/Account/fields/Applicable_Country_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Country_Requirements__c</fullName>
    <inlineHelpText>Please select the applicable country requirement(s)</inlineHelpText>
    <label>Applicable Country Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>China CIQ parameters tested</fullName>
            </value>
            <value>
                <fullName>China factory list</fullName>
            </value>
            <value>
                <fullName>Russia approved</fullName>
            </value>
            <value>
                <fullName>Saudi Arabia SFDA registration</fullName>
            </value>
            <value>
                <fullName>Pre-shipment Inspection</fullName>
            </value>
            <value>
                <fullName>Additional testing required</fullName>
            </value>
            <value>
                <fullName>Legalizations CoC and/or Embassy</fullName>
            </value>
            <value>
                <fullName>Import license/derogation</fullName>
            </value>
            <value>
                <fullName>Sanctioned country</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>