force-app/main/default/objects/Account/fields/Approved_Item__c.field-meta.xml
<CustomField>
    <fullName>Approved_Item__c</fullName>
    <label>Approved Item</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMF / BUTTEROIL</fullName>
            </value>
            <value>
                <fullName>AMPI WPC Feed</fullName>
            </value>
            <value>
                <fullName>AMPI WPC Food</fullName>
            </value>
            <value>
                <fullName>ANIMAL FEED BLENDS</fullName>
            </value>
            <value>
                <fullName>ANIMAL FEED LSDP</fullName>
            </value>
            <value>
                <fullName>ANIMAL FEED MISC.</fullName>
            </value>
            <value>
                <fullName>BFP FUTURES</fullName>
            </value>
            <value>
                <fullName>BFP OPTIONS</fullName>
            </value>
            <value>
                <fullName>BLENDED MPC</fullName>
            </value>
            <value>
                <fullName>BLUEGRASS</fullName>
            </value>
            <value>
                <fullName>BULK SWEET WHEY</fullName>
            </value>
            <value>
                <fullName>BUTTER FUTURES</fullName>
            </value>
            <value>
                <fullName>BUTTERMILK</fullName>
            </value>
            <value>
                <fullName>BUTTERMILK   LSDP</fullName>
            </value>
            <value>
                <fullName>BUTTERMILK OFF-SPEC</fullName>
            </value>
            <value>
                <fullName>BUTTER OPTIONS</fullName>
            </value>
            <value>
                <fullName>BUTTER - SALTED</fullName>
            </value>
            <value>
                <fullName>BUTTER-SALTED LSDP</fullName>
            </value>
            <value>
                <fullName>BUTTER - UNSALTED</fullName>
            </value>
            <value>
                <fullName>BUTTER UNSALTED LSDP</fullName>
            </value>
            <value>
                <fullName>CASEIN, ACID</fullName>
            </value>
            <value>
                <fullName>CASEIN, RENNET</fullName>
            </value>
            <value>
                <fullName>CASEINATE, CALCIUM</fullName>
            </value>
            <value>
                <fullName>CASEINATE, POTASSIUM</fullName>
            </value>
            <value>
                <fullName>CASEINATE, SODIUM</fullName>
            </value>
            <value>
                <fullName>CHEDDAR CHEESE</fullName>
            </value>
            <value>
                <fullName>CHEESE, MISC</fullName>
            </value>
            <value>
                <fullName>COCOA POWDER</fullName>
            </value>
            <value>
                <fullName>CREAM PRODUCTS</fullName>
            </value>
            <value>
                <fullName>CREAM PRODUCTS  LSDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>