force-app/main/default/objects/Account/fields/AR_Terms__c.field-meta.xml
<CustomField>
    <fullName>AR_Terms__c</fullName>
    <label>AR Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>