force-app/main/default/objects/Account/fields/Avg_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_Past_Due__c</fullName>
    <label>Avg Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>