force-app/main/default/objects/Account/fields/Avg_Days_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_to_Pay__c</fullName>
    <label>Avg Days to Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>