force-app/main/default/objects/Account/fields/Bank_approval_LOI_Required__c.field-meta.xml
<CustomField>
    <fullName>Bank_approval_LOI_Required__c</fullName>
    <inlineHelpText>Is bank approval/LOI required for this customer in regard to sanctioned country?</inlineHelpText>
    <label>Bank approval/LOI Required</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, bank approval</fullName>
            </value>
            <value>
                <fullName>Yes, bank approval + LOI</fullName>
            </value>
            <value>
                <fullName>Yes, LOI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>