force-app/main/default/objects/Account/fields/bluetahiti__creditSafeLastRefreshed__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeLastRefreshed__c</fullName>
    <label>Creditsafe Last Refreshed</label>
    <type>Date</type>
</CustomField>