force-app/main/default/objects/Account/fields/bluetahiti__creditSafeLimit__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditSafeLimit__c</fullName>
    <label>Creditsafe Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>