force-app/main/default/objects/Account/fields/bluetahiti__creditsafeNumber__c.field-meta.xml
<CustomField>
    <fullName>bluetahiti__creditsafeNumber__c</fullName>
    <label>Creditsafe Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>