force-app/main/default/objects/Account/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRIMARK</fullName>
            </value>
            <value>
                <fullName>AGROCOMERICA</fullName>
            </value>
            <value>
                <fullName>AGROPUR</fullName>
            </value>
            <value>
                <fullName>ALIMENTA</fullName>
            </value>
            <value>
                <fullName>AMPI</fullName>
            </value>
            <value>
                <fullName>APPROVED BRANDS</fullName>
            </value>
            <value>
                <fullName>ARLA</fullName>
            </value>
            <value>
                <fullName>BELGIOIOSO</fullName>
            </value>
            <value>
                <fullName>BINCO</fullName>
            </value>
            <value>
                <fullName>BLUEGRASS</fullName>
            </value>
            <value>
                <fullName>BONGARDS</fullName>
            </value>
            <value>
                <fullName>BORDEN</fullName>
            </value>
            <value>
                <fullName>BREWSTER</fullName>
            </value>
            <value>
                <fullName>BRIESS</fullName>
            </value>
            <value>
                <fullName>CAYUGA MILK</fullName>
            </value>
            <value>
                <fullName>CDC</fullName>
            </value>
            <value>
                <fullName>CDI</fullName>
            </value>
            <value>
                <fullName>CEDAR VALLEY</fullName>
            </value>
            <value>
                <fullName>CHALLENGE</fullName>
            </value>
            <value>
                <fullName>CLALDY</fullName>
            </value>
            <value>
                <fullName>COLUN</fullName>
            </value>
            <value>
                <fullName>CONAPROLE</fullName>
            </value>
            <value>
                <fullName>CONTINENTAL</fullName>
            </value>
            <value>
                <fullName>COOPERATIVA</fullName>
            </value>
            <value>
                <fullName>CORLASA</fullName>
            </value>
            <value>
                <fullName>CROPP</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DAITANVET</fullName>
            </value>
            <value>
                <fullName>DANONE</fullName>
            </value>
            <value>
                <fullName>DARIGOLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>