force-app/main/default/objects/Account/fields/Budget_FY_per_product__c.field-meta.xml
<CustomField>
    <fullName>Budget_FY_per_product__c</fullName>
    <label>Budget FY per product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>