force-app/main/default/objects/Account/fields/Certificate_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Of_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Of Origin</label>
    <type>Checkbox</type>
</CustomField>