force-app/main/default/objects/Account/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please Check if this vendor is GFSI Certified</inlineHelpText>
    <label>GFSI Certified</label>
    <type>Checkbox</type>
</CustomField>