force-app/main/default/objects/Account/fields/Child_Name_Account__c.field-meta.xml
<CustomField>
    <fullName>Child_Name_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Name Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Child Name Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>