force-app/main/default/objects/Account/fields/China_CIQ_parameters_tested__c.field-meta.xml
<CustomField>
    <fullName>China_CIQ_parameters_tested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>China CIQ parameters tested</label>
    <type>Checkbox</type>
</CustomField>