force-app/main/default/objects/Account/fields/China_factory_list__c.field-meta.xml
<CustomField>
    <fullName>China_factory_list__c</fullName>
    <label>China factory list</label>
    <length>80</length>
    <type>Text</type>
</CustomField>