force-app/main/default/objects/Account/fields/Country_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Country_Requirements__c</fullName>
    <inlineHelpText>Are there any special country requirements applicable for this customer?</inlineHelpText>
    <label>Country Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Logistics_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>