force-app/main/default/objects/Account/fields/CreditHoldExempt__c.field-meta.xml
<CustomField>
    <fullName>CreditHoldExempt__c</fullName>
    <label>CreditHoldExempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>