force-app/main/default/objects/Account/fields/CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM ID</label>
    <type>Text</type>
</CustomField>