force-app/main/default/objects/Account/fields/crmxref__c.field-meta.xml
<CustomField>
    <fullName>crmxref__c</fullName>
    <label>CRM ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>