force-app/main/default/objects/Account/fields/Customer_buying_Item_Specification__c.field-meta.xml
<CustomField>
    <fullName>Customer_buying_Item_Specification__c</fullName>
    <label>Customer buying Item Specification</label>
    <type>TextArea</type>
</CustomField>