force-app/main/default/objects/Account/fields/Customer_Buying_Specification_Present__c.field-meta.xml
<CustomField>
    <fullName>Customer_Buying_Specification_Present__c</fullName>
    <label>Customer Buying Specification Present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>