force-app/main/default/objects/Account/fields/Customer_Priority_Level__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority_Level__c</fullName>
    <label>Customer Priority Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>