force-app/main/default/objects/Account/fields/CustomerCurrencyCode_ABAmounts__c.field-meta.xml
<CustomField>
    <fullName>CustomerCurrencyCode_ABAmounts__c</fullName>
    <label>CustomerCurrencyCode-ABAmounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>