force-app/main/default/objects/Account/fields/cvof1_addr_ref__c.field-meta.xml
<CustomField>
    <fullName>cvof1_addr_ref__c</fullName>
    <inlineHelpText>1 is for the main Profile Account data</inlineHelpText>
    <label>cvof1_addr_ref</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>