force-app/main/default/objects/Account/fields/cvof1_crm_xref__c.field-meta.xml
<CustomField>
    <fullName>cvof1_crm_xref__c</fullName>
    <inlineHelpText>GUID for matching record in CRM--accounts with matching GUID are the same account, but have multiple spots in ERP.</inlineHelpText>
    <label>cvof1_crm_xref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>