force-app/main/default/objects/Account/fields/cvof2_co_site__c.field-meta.xml
<CustomField>
    <fullName>cvof2_co_site__c</fullName>
    <inlineHelpText>Which Hoogwegt Company does this belong to HW=Hoogwegt US, GH=Good Home Foods, LP= Lactopura.  We are no longer using GH &amp; LP.</inlineHelpText>
    <label>cvof2_co_site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>GH</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>