force-app/main/default/objects/Account/fields/cvof2_rec_type__c.field-meta.xml
<CustomField>
    <fullName>cvof2_rec_type__c</fullName>
    <label>cvof2_rec_type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>