force-app/main/default/objects/Account/fields/cvofaddress_line1__c.field-meta.xml
<CustomField>
    <fullName>cvofaddress_line1__c</fullName>
    <inlineHelpText>Address Line 1.  Should match accmaddress_line1.  If not Legal address is different than profile address.</inlineHelpText>
    <label>cvofaddress_line1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>