force-app/main/default/objects/Account/fields/cvofaddress_line2__c.field-meta.xml
<CustomField>
    <fullName>cvofaddress_line2__c</fullName>
    <inlineHelpText>Address Line2.  Should match accmaddress_line2.  If not Legal address is different than profile address.</inlineHelpText>
    <label>cvofaddress_line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>