force-app/main/default/objects/Account/fields/cvofaddress_line3__c.field-meta.xml
<CustomField>
    <fullName>cvofaddress_line3__c</fullName>
    <inlineHelpText>Address Line3.  Should match accmaddress_line3.  If not Legal address is different than profile address.</inlineHelpText>
    <label>cvofaddress_line3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>