force-app/main/default/objects/Account/fields/cvofaddress_over1__c.field-meta.xml
<CustomField>
    <fullName>cvofaddress_over1__c</fullName>
    <inlineHelpText>Longer Address data</inlineHelpText>
    <label>cvofaddress_over1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>