force-app/main/default/objects/Account/fields/cvofalpha_121__c.field-meta.xml
<CustomField>
    <fullName>cvofalpha_121__c</fullName>
    <inlineHelpText>Plant</inlineHelpText>
    <label>cvofalpha_121</label>
    <length>255</length>
    <type>Text</type>
</CustomField>