force-app/main/default/objects/Account/fields/cvofalpha_122__c.field-meta.xml
<CustomField>
    <fullName>cvofalpha_122__c</fullName>
    <inlineHelpText>Plant</inlineHelpText>
    <label>cvofalpha_122</label>
    <length>255</length>
    <type>Text</type>
</CustomField>