force-app/main/default/objects/Account/fields/cvofalpha_20__c.field-meta.xml
<CustomField>
    <fullName>cvofalpha_20__c</fullName>
    <inlineHelpText>Plant</inlineHelpText>
    <label>cvofalpha_20</label>
    <length>255</length>
    <type>Text</type>
</CustomField>