force-app/main/default/objects/Account/fields/cvofemail1__c.field-meta.xml
<CustomField>
    <fullName>cvofemail1__c</fullName>
    <inlineHelpText>Account email</inlineHelpText>
    <label>cvofemail1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>