force-app/main/default/objects/Account/fields/cvoffax1__c.field-meta.xml
<CustomField>
    <fullName>cvoffax1__c</fullName>
    <inlineHelpText>Fax Number</inlineHelpText>
    <label>cvoffax1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>