force-app/main/default/objects/Account/fields/cvofim1__c.field-meta.xml
<CustomField>
    <fullName>cvofim1__c</fullName>
    <inlineHelpText>Profile Name overflow</inlineHelpText>
    <label>cvofim1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>