force-app/main/default/objects/Account/fields/cvofim2__c.field-meta.xml
<CustomField>
    <fullName>cvofim2__c</fullName>
    <inlineHelpText>Profile Name overflow</inlineHelpText>
    <label>cvofim2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>