force-app/main/default/objects/Account/fields/cvofmanager1__c.field-meta.xml
<CustomField>
    <fullName>cvofmanager1__c</fullName>
    <inlineHelpText>Manager</inlineHelpText>
    <label>cvofmanager1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>