force-app/main/default/objects/Account/fields/cvofname1__c.field-meta.xml
<CustomField>
    <fullName>cvofname1__c</fullName>
    <inlineHelpText>Legal Name</inlineHelpText>
    <label>cvofname1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>