force-app/main/default/objects/Account/fields/cvofnumber1__c.field-meta.xml
<CustomField>
    <fullName>cvofnumber1__c</fullName>
    <label>cvofnumber1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>