force-app/main/default/objects/Account/fields/cvofphone1__c.field-meta.xml
<CustomField>
    <fullName>cvofphone1__c</fullName>
    <inlineHelpText>Phone Number</inlineHelpText>
    <label>cvofphone1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>