force-app/main/default/objects/Account/fields/Date_LastCreditReview__c.field-meta.xml
<CustomField>
    <fullName>Date_LastCreditReview__c</fullName>
    <label>Date-LastCreditReview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>