force-app/main/default/objects/Account/fields/Dioxin_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Dioxin_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dioxin Certificate</label>
    <type>Checkbox</type>
</CustomField>