force-app/main/default/objects/Account/fields/Document_in_Container__c.field-meta.xml
<CustomField>
    <fullName>Document_in_Container__c</fullName>
    <label>Document in Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>