force-app/main/default/objects/Account/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <label>Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>