force-app/main/default/objects/Account/fields/Due_Payments__c.field-meta.xml
<CustomField>
    <fullName>Due_Payments__c</fullName>
    <label>Due Payments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>