force-app/main/default/objects/Account/fields/DuplicateKey__c.field-meta.xml
<CustomField>
    <fullName>DuplicateKey__c</fullName>
    <formula>LEFT(Name,3)</formula>
    <label>DuplicateKey</label>
    <type>Text</type>
</CustomField>