force-app/main/default/objects/Account/fields/EntityCompany__c.field-meta.xml
<CustomField>
    <fullName>EntityCompany__c</fullName>
    <label>EntityCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>