force-app/main/default/objects/Account/fields/Environmental_Sustainable_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Environmental_Sustainable_Requirements__c</fullName>
    <label>Environmental/Sustainable Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No requirements on environment/sustainability</fullName>
            </value>
            <value>
                <fullName>ISO 140001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>