force-app/main/default/objects/Account/fields/ERPCUSTNUM__c.field-meta.xml
<CustomField>
    <fullName>ERPCUSTNUM__c</fullName>
    <externalId>true</externalId>
    <label>ERPCUSTNUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>