force-app/main/default/objects/Account/fields/Ethical__c.field-meta.xml
<CustomField>
    <fullName>Ethical__c</fullName>
    <label>Ethical</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No ethical requirements</fullName>
            </value>
            <value>
                <fullName>SMETA pillar 2</fullName>
            </value>
            <value>
                <fullName>SMETA pillar 4</fullName>
            </value>
            <value>
                <fullName>Code of conduct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>