force-app/main/default/objects/Account/fields/Ext_SFAccCusNum__c.field-meta.xml
<CustomField>
    <fullName>Ext_SFAccCusNum__c</fullName>
    <externalId>true</externalId>
    <label>Ext_SFAccCusNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>