force-app/main/default/objects/Account/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>