force-app/main/default/objects/Account/fields/Floor_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Floor_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Loaded</label>
    <type>Checkbox</type>
</CustomField>