force-app/main/default/objects/Account/fields/Free_from_veterinary_disease__c.field-meta.xml
<CustomField>
    <fullName>Free_from_veterinary_disease__c</fullName>
    <label>Free from veterinary disease</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No requirement on veterinary disease</fullName>
            </value>
            <value>
                <fullName>BSE</fullName>
            </value>
            <value>
                <fullName>FMD</fullName>
            </value>
            <value>
                <fullName>LSD</fullName>
            </value>
            <value>
                <fullName>Para TB</fullName>
            </value>
            <value>
                <fullName>Brucellosis</fullName>
            </value>
            <value>
                <fullName>Anthrax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>