force-app/main/default/objects/Account/fields/Free_Sale_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Free_Sale_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Sale Certificate</label>
    <type>Checkbox</type>
</CustomField>