force-app/main/default/objects/Account/fields/Free_time_at_POD_for_this_customer__c.field-meta.xml
<CustomField>
    <fullName>Free_time_at_POD_for_this_customer__c</fullName>
    <label>Free time at POD for this customer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>