force-app/main/default/objects/Account/fields/FreightHandlingCode__c.field-meta.xml
<CustomField>
    <fullName>FreightHandlingCode__c</fullName>
    <label>FreightHandlingCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>