force-app/main/default/objects/Account/fields/General_Remark__c.field-meta.xml
<CustomField>
    <fullName>General_Remark__c</fullName>
    <label>General Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>