force-app/main/default/objects/Account/fields/GFSI__c.field-meta.xml
<CustomField>
    <fullName>GFSI__c</fullName>
    <label>GFSI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>