force-app/main/default/objects/Account/fields/GFSI_Certificate__c.field-meta.xml
<CustomField>
    <fullName>GFSI_Certificate__c</fullName>
    <label>GFSI Certificate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>GFSI_Certificate_Required__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Enter</fullName>
            </value>
            <value>
                <fullName>BRC</fullName>
            </value>
            <value>
                <fullName>IFS</fullName>
            </value>
            <value>
                <fullName>FSSC22000</fullName>
            </value>
            <value>
                <fullName>SQF</fullName>
            </value>
            <value>
                <fullName>Any</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>